@@ -1,3 +1,8 @@
+2003-05-09	ujwal
+
+    * Applying transparency when setting background color from 
+      color table.
+
 2003-05-07	ujwal
 
     * When a new Default Session entry is created, the font is 
